--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
           <span>OpenAI Model</span>
           <select id="modelSelect" required>
             <option value="" disabled selected>Select a model...</option>
+            <!-- GPT-5.2 family -->
+            <option value="gpt-5.2">gpt-5.2</option>
+            <option value="gpt-5.2-pro">gpt-5.2-pro</option>
             <!-- GPT-5 family -->
             <option value="gpt-5">gpt-5</option>
             <option value="gpt-5-pro">gpt-5-pro</option>
